--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
   "name": "zyblog",
   "version": "1.0.0",
-  "description": "my first blog",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/biezhenyu/zyBlog.git"
+  },
   "author": "bzy",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/biezhenyu/zyBlog/issues"
+  },
+  "homepage": "https://github.com/biezhenyu/zyBlog#readme",
   "dependencies": {
+    "config-lite": "^2.1.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "ejs": "^2.6.1",
-    "express": "^4.14.0"
+    "express": "^4.16.3",
+    "express-formidable": "git+https://github.com/utatti/express-formidable.git",
+    "express-session": "^1.15.6",
+    "express-winston": "^3.0.0",
+    "marked": "^0.5.0",
+    "moment": "^2.22.2",
+    "mongolass": "^4.4.0",
+    "objectid-to-timestamp": "^1.3.0",
+    "sha1": "^1.1.1",
+    "winston": "^3.1.0"
   }
 }
